Fixed issue with social icon spacing in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -12,24 +12,29 @@ body {
     padding-bottom: 3rem;
   }
 
-  @media (max-height: 381px) {
-    .navbar-nav > li > a {
-      padding-top: 0px;
-      padding-bottom: 0.3em;
-      }
-     }
-
   #social {
     display: flex;
     flex-direction: row;
     list-style: none;
-    margin-right: 3rem;
+    margin-right: 1rem;
   }
 
   #social li a {
     text-decoration: none;
     color: white;
-    padding-right: 1rem;
+  }
+
+  @media (max-height: 381px) {
+    .navbar-nav > li > a {
+      padding-top: 0px;
+      padding-bottom: 0.3em;
+    }
+  }
+
+  @media (max-width: 991px) {
+    #social li a {
+      margin-right: 1rem;
+    }
   }
 
   /* JUMBOTRON
